Fix for notification color when wrapped in anchor.

--- a/less/components/alerts.less
+++ b/less/components/alerts.less
@@ -332,6 +332,10 @@
 	z-index: 9000;
 }
 
+.notifications > a {
+	color: @black;
+}
+
 .notifications .notification {
 	overflow: hidden;
 	margin: 14px 0 0 0;
